--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator 'iPhone 16",
+    "ios16": "react-native run-ios --simulator 'iPhone 16'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
